Fixed URL() constructor deprecated issue.